html element set up

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
 <body>
   <div>Black Jack Here</div>
+  <h2>Dealer:<span id="dealer-sum">Total Num</span></h2>
+  <div id="dealer-cards">
+    <img src="./cards/BACK.png" alt="back">
+    <img src="./cards/10-D.png" alt="10">
+  </div>
+  <h2>You:<span id="your-sum">Total</span></h2>
+  <div id="your-cards"></div>
+  <br>
+  <button id="hit">hit</button>
+  <button id="stay">stay</button>
+  <p id="result">win/lose</p>
 </body>
 
 </html>
