--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <img src="./cards/10-D.png" alt="10">
   </div>
   <h2>You:<span id="your-sum">Total</span></h2>
-  <div id="your-cards"></div>
+  <div id="your-cards">
+    <img src="./cards/10-C.png" alt="10">
+    <img src="./cards/9-D.png" alt="10">
+  </div>
   <br>
   <button id="hit">hit</button>
   <button id="stay">stay</button>
