show cards for dealer and player

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <div>Black Jack Here</div>
   <h2>Dealer:<span id="dealer-sum">Total Num</span></h2>
   <div id="dealer-cards">
-    <img src="./cards/BACK.png" alt="back">
-    <img src="./cards/10-D.png" alt="10">
+    <img id='hidden' src="./cards/BACK.png" alt="back">
+
   </div>
   <h2>You:<span id="your-sum">Total</span></h2>
   <div id="your-cards">
-    <img src="./cards/10-C.png" alt="10">
-    <img src="./cards/9-D.png" alt="10">
+
+
   </div>
   <br>
   <button id="hit">hit</button>
