stay button logic

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
 <body>
   <div>Black Jack Here</div>
-  <h2>Dealer:<span id="dealer-sum">Total Num</span></h2>
+  <h2>Dealer:<span id="dealer-sum"></span></h2>
   <div id="dealer-cards">
     <img id='hidden' src="./cards/BACK.png" alt="back">
 
   </div>
-  <h2>You:<span id="your-sum">Total</span></h2>
+  <h2>You:<span id="your-sum"></span></h2>
   <div id="your-cards">
 
 
   </div>
   <br>
-  <button id="hit">hit</button>
-  <button id="stay">stay</button>
-  <p id="result">win/lose</p>
+  <button id="hit">Hit</button>
+  <button id="stay">Stay</button>
+  <p id="result"></p>
 </body>
 
 </html>
